[feature] adding bookmark drag and drop

--- a/index.html
+++ b/index.html
@@ -451,6 +451,22 @@
 <script src="js/keyboard.js"></script>
 <script src="js/background.js"></script>
 <script src="js/title.js"></script>
-<script src="js/init.js"></script>
+<script src="js/init.js"></script><!-- Entire bundle -->
+<script src="js/draggable.bundle.js"></script>
+<!-- legacy bundle for older browsers (IE11) -->
+<!-- <script src="js/draggable.bundle.legacy.js"></script> -->
+<!-- Draggable only -->
+<!-- <script src="js/draggable.js"></script> -->
+<!-- Sortable only -->
+<!-- <script src="js/sortable.js"></script> -->
+<!-- Droppable only -->
+<!-- <script src="js/droppable.js"></script> -->
+<!-- Swappable only -->
+<!-- <script src="js/swappable.js"></script> -->
+<!-- Plugins only -->
+<!-- <script src="js/plugins.js"></script> -->
+
+<script src="js/Sortable.min.js"></script>
+<script src="js/test.js"></script>
 
 </html>
