[feature] adding controls to resize header

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="header-item header-menu">
-          <button id="control-menu" class="control-menu button mb-0" tabindex="1">
+          <button id="control-menu" class="control-menu button button-link mb-0" tabindex="1">
             <span class="button-text"><span class="icon-settings"></span></span>
           </button>
         </div>
@@ -270,7 +270,7 @@
             </div>
             <div class="input-wrap form-indent-1">
               <label for="control-header-shade-padding">Top & bottom padding</label>
-              <input id="control-header-shade-padding" class="control-header-shade-padding" type="range" min="2" max="20" value="0" tabindex="1">
+              <input id="control-header-shade-padding" class="control-header-shade-padding" type="range" min="0" max="20" value="0" tabindex="1">
             </div>
             <div class="checkbox-wrap form-indent-1">
               <input id="control-header-shade-border-top" class="control-header-shade-border-top" type="checkbox" value="always" tabindex="1">
@@ -279,6 +279,10 @@
             <div class="checkbox-wrap form-indent-1">
               <input id="control-header-shade-border-bottom" class="control-header-shade-border-bottom" type="checkbox" value="always" tabindex="1">
               <label for="control-header-shade-border-bottom"><span class="label-icon"></span>Bottom border</label>
+            </div>
+            <div class="input-wrap form-indent-1">
+              <label for="control-header-size">Size</label>
+              <input id="control-header-size" class="control-header-size" type="range" min="100" max="300" value="0" tabindex="1">
             </div>
           </div>
         </div>
